# hello-cmake

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CompileOptions.cmake
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/libsolver/: CMakeLists.txt
